[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/WeapAffDescGen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CopiedText.tscn" type="PackedScene" id=2]

[node name="WeapAffDescGen" type="Node2D"]
script = ExtResource( 1 )

[node name="TB_WeaponParamIDLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 75.0
margin_right = 102.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 106, 47 )
text = "Base Weapon
Param ID (No
Final Four Digits)"
align = 1

[node name="TB_WeaponParamID" type="TextEdit" parent="TB_WeaponParamIDLabel"]
margin_left = 107.0
margin_top = 8.0
margin_right = 303.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 13, 49 )
text = "1000"

[node name="TB_DescriptionLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 141.0
margin_right = 94.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 106, 47 )
text = "Description Text"
align = 1

[node name="TB_Description" type="TextEdit" parent="TB_DescriptionLabel"]
margin_left = 106.0
margin_top = -2.0
margin_right = 376.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 13, 49 )
text = "Longsword"

[node name="TextOutput" type="TextEdit" parent="."]
margin_left = 401.0
margin_top = 32.0
margin_right = 783.0
margin_bottom = 579.0
text = "Output Text"

[node name="GenerateAffinityTitleButton" type="Button" parent="."]
margin_left = 111.0
margin_top = 425.0
margin_right = 340.0
margin_bottom = 445.0
text = "Generate Affinity Description Text"

[node name="CopiedText" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 189, 457 )

[connection signal="visibility_changed" from="." to="." method="_on_WeapAffDescGen_visibility_changed"]
[connection signal="text_changed" from="TB_WeaponParamIDLabel/TB_WeaponParamID" to="." method="_on_TB_WeaponParamID_text_changed"]
[connection signal="pressed" from="GenerateAffinityTitleButton" to="." method="_on_GenerateAffinityTitleButton_pressed"]
